<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gr_heart_data_y"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_heart_data_graph_y"
        app:layout_constraintTop_toBottomOf="@+id/gr_heart_data_x" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gr_heart_data_scg"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:keepScreenOn="true"
        app:layout_constraintLeft_toRightOf="@+id/tv_heart_data_graph_scg"
        app:layout_constraintTop_toBottomOf="@+id/gr_heart_data_z" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gr_heart_data_z"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_heart_data_graph_z"
        app:layout_constraintTop_toBottomOf="@+id/gr_heart_data_y" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gr_heart_data_x"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_heart_data_graph_x"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_heart_data_graph_x"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_main_graph_x"
        android:textAlignment="center"
        android:textColor="#39FF14"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_heart_data_graph_y"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/tv_main_graph_Y"
        android:textAlignment="center"
        android:textColor="#39FF14"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heart_data_graph_x" />

    <TextView
        android:id="@+id/tv_heart_data_graph_z"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/tv_main_graph_Z"
        android:textAlignment="center"
        android:textColor="#39FF14"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heart_data_graph_y" />

    <TextView
        android:id="@+id/tv_heart_data_graph_scg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/tv_main_graph_SCG"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heart_data_graph_z" />

    <fragment
        android:id="@+id/fr_heart_data_min_bpm"
        android:name="com.vikramsingh.seismocardiograph.HeartDisplayFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fr_heart_data_current_bpm"
        tools:layout="@layout/fragment_heart" />

    <fragment
        android:id="@+id/fr_heart_data_average_bpm"
        android:name="com.vikramsingh.seismocardiograph.HeartDisplayFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="-1dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_heart_data_min_bpm"
        tools:layout="@layout/fragment_heart" />

    <fragment
        android:id="@+id/fr_heart_data_max_bpm"
        android:name="com.vikramsingh.seismocardiograph.HeartDisplayFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fr_heart_data_current_bpm"
        tools:layout="@layout/fragment_heart" />

    <fragment
        android:id="@+id/fr_heart_data_current_bpm"
        android:name="com.vikramsingh.seismocardiograph.HeartDisplayFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heart_data_graph_scg"
        tools:layout="@layout/fragment_heart" />

</android.support.constraint.ConstraintLayout>