<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.vikramsingh.seismocardiograph.MainActivity">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gr_heart_data_y"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_heart_data_graph_y"
        app:layout_constraintTop_toBottomOf="@+id/gr_heart_data_x" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gr_main_scg"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_heart_data_graph_scg"
        app:layout_constraintTop_toBottomOf="@+id/gr_heart_data_z"
        android:layout_marginTop="0dp"
        android:keepScreenOn="true"/>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gr_heart_data_z"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_heart_data_graph_z"
        app:layout_constraintTop_toBottomOf="@+id/gr_heart_data_y" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gr_heart_data_x"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_heart_data_graph_x"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_heart_data_graph_x"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_main_graph_x"
        android:textAlignment="center"
        android:textColor="#39FF14"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_heart_data_graph_y"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:text="@string/tv_main_graph_Y"
        android:textAlignment="center"
        android:textColor="#39FF14"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heart_data_graph_x"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_heart_data_graph_z"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:text="@string/tv_main_graph_Z"
        android:textAlignment="center"
        android:textColor="#39FF14"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heart_data_graph_y"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_heart_data_graph_scg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/tv_main_graph_SCG"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heart_data_graph_z" />

    <Button
        android:id="@+id/bt_main_record"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="#222"
        android:text="Record"
        android:textColor="?attr/colorAccent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bt_main_save"
        app:layout_constraintHorizontal_bias="0.027"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/bt_main_save"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="#222"
        android:text="Save"
        android:textColor="?attr/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.027" />

    <fragment
        android:id="@+id/fr_heart_data_min_bpm"
        android:name="com.vikramsingh.seismocardiograph.HeartDisplayFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fr_heart_data_current_bpm"
        android:layout_marginTop="0dp"
        tools:layout="@layout/fragment_heart" />

    <fragment
        android:id="@+id/fr_main_average_bpm"
        android:name="com.vikramsingh.seismocardiograph.HeartDisplayFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="-1dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/fr_heart_data_min_bpm"
        tools:layout="@layout/fragment_heart" />

    <fragment
        android:id="@+id/fr_main_max_bpm"
        android:name="com.vikramsingh.seismocardiograph.HeartDisplayFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/fr_heart_data_current_bpm"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout="@layout/fragment_heart" />

    <fragment
        android:id="@+id/fr_heart_data_current_bpm"
        android:name="com.vikramsingh.seismocardiograph.HeartDisplayFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_heart_data_graph_scg"
        tools:layout="@layout/fragment_heart" />

    <Button
        android:id="@+id/bt_main_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Button"
        app:layout_constraintLeft_toRightOf="@+id/bt_main_save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/bt_main_phone_flat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="163dp"
        android:layout_marginRight="8dp"
        android:background="@mipmap/phone_icon_flat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/bt_main_save"
        app:layout_constraintRight_toLeftOf="@+id/bt_main_phone_landscape" />

    <Button
        android:id="@+id/bt_main_phone_landscape"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@mipmap/phone_icon_landscape"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/bt_main_phone_portrait"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@mipmap/phone_icon_portait"
        app:layout_constraintBottom_toTopOf="@+id/bt_main_phone_landscape"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
